--- a/about.html
+++ b/about.html
@@ -608,7 +608,7 @@
 
         <ul class="menu">
             <li><a href="Rising Waters.html"style="color: white;">Home</a></li>
-            <li><a href="About.html" >About</a></li>
+            <li><a href="about.html" >About</a></li>
             <li><a href="https://www.facebook.com/janjan.sericon" style="color: white;">Contact</a></li>
             <li><a href="references.html"style="color: white;">Biography</a></li>
         </ul>
