--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ a
                     <p class="text-white">Flooding can lead to natural disasters that result in financial, social, and structural ruin. Although the risk of flooding can never be completely eliminated, there are solutions to reduce the risk.
                     </p>
                     <br>
-                    <a href="About.html" class="btn btn-primary">Read More</a>
+                    <a href="about.html" class="btn btn-primary">Read More</a>
                 </div>
             </div>
         </div>
