--- a/dangerous.html
+++ b/dangerous.html
@@ -51,7 +51,7 @@
     <ul class="dropdown-menu">               
     <li><a class="dropdown-item" href="deforestration.html">Deforestration</a></li>
     <hr class="dropdown-divider">
-    <li><a class="dropdown-item" href="urbanisation.html">Increased Urbanisation</a></li>
+    <li><a class="dropdown-item" href="urbanisation.html">Increased Urbanization</a></li>
     <li><hr class="dropdown-divider"></li>
     <li><a class="dropdown-item" href="rainfa.jpg">Heavy Rainfall</a></li>             
     </ul><li class="nav-item">
