--- a/urbanisation.html
+++ b/urbanisation.html
@@ -73,7 +73,7 @@
 
   <br><br><br><br>
 
-  <h1 style="font-size: 70px;text-align: center;font-family: Stylus, sans-serif;">INCREASED URBANISATION</h1>
+  <h1 style="font-size: 70px;text-align: center;font-family: Stylus, sans-serif;">INCREASED URBANIZATION</h1>
 
   <div class="container-personal">
     <!-- CAROUSEL -->
