--- a/deforestration.html
+++ b/deforestration.html
@@ -184,7 +184,7 @@
               </a></li>
       </ul>
       <ul class="menu">
-          <li><a href="Rising Waters.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="https://www.facebook.com/janjan.sericon">Contact</a></li>
           <li><a href="references.html">Biography</a></li>
