--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ a
                 </a></li>
         </ul>
         <ul class="menu">
-            <li><a href="Rising Waters.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="https://www.facebook.com/janjan.sericon">Contact</a></li>
             <li><a href="references.html">Biography</a></li>
