--- a/urbanisation.html
+++ b/urbanisation.html
@@ -102,7 +102,7 @@
   </div>
   <br><br>
 
-  <h3 style="padding-left: 50px;">What is Increased Urbanisation?</h3>
+  <h3 style="padding-left: 50px;">What is Increased Urbanization?</h3>
   <p style="font-size: 20px; padding-left: 75px; padding-right: 75px;">Increased urbanization refers to the process of a
     growing population shifting from rural
     areas to urban centers. It involves the expansion of cities and the conversion of rural land into urban areas with
@@ -115,7 +115,7 @@
 
   &nbsp;
 
-  <h3 style="padding-left: 50px;">Why Increased Urbanisation is one of the causes of Floods?</h3>
+  <h3 style="padding-left: 50px;">Why Increased Urbanization is one of the causes of Floods?</h3>
   <p style="font-size: 20px; padding-left: 75px; padding-right: 75px;">Increased urbanization can contribute to floods
     through multiple mechanisms. Firstly,
     the replacement of natural land surfaces with impervious materials like concrete and asphalt reduces the ability of
@@ -133,7 +133,7 @@
 
   &nbsp;
 
-  <h3 style="padding-left: 50px;">What are the negative effects of Increased Urbanisation?</h3>
+  <h3 style="padding-left: 50px;">What are the negative effects of Increased Urbanization?</h3>
   <p style="font-size: 20px; padding-left: 75px; padding-right: 75px;">Increased urbanization brings several negative
     effects. Firstly, it can lead to overcrowding
     and strain on urban infrastructure, including housing, transportation, and public services, resulting in inadequate
@@ -146,7 +146,7 @@
 
   &nbsp;
 
-  <h3 style="padding-left: 50px;">What are the positive effects of Increased Urbanisation?</h3>
+  <h3 style="padding-left: 50px;">What are the positive effects of Increased Urbanization?</h3>
   <p style="font-size: 20px; padding-left: 75px; padding-right: 75px;">Increased urbanization can have positive effects
     on societies and economies. Firstly,
     urbanization can create opportunities for economic growth by attracting businesses, industries, and job
