--- a/diseases.html
+++ b/diseases.html
@@ -127,7 +127,7 @@
   &nbsp;
 
   <h3 style="padding-left: 50px;">Why do diseases spread when there is a flood? </h3>
-  <p style="font-size: 20px; padding-left: 75px; padding-right: 75px;">DThe possible diseases is malaria, dengue, and yellow fever, on the other hand, increases due to standing water that serves as breeding sites for mosquitoes.</p>
+  <p style="font-size: 20px; padding-left: 75px; padding-right: 75px;">The possible diseases is malaria, dengue, and yellow fever, on the other hand, increases due to standing water that serves as breeding sites for mosquitoes.</p>
 
   &nbsp;
 
