--- a/heavyrainfall.html
+++ b/heavyrainfall.html
@@ -96,7 +96,7 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="hea.jpeg" class="d-block w-100" alt="def1">
+          <img src="hea.jpg" class="d-block w-100" alt="def1">
         </div
         <div class="carousel-item">
           <img src="heavy.jpg" class="d-block w-100" alt="def2">
